tests/parsing/cmc/errors/126.cmc
(define-system sys :input ((a Int)))